--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,20 @@
-.card-front,
-.card-back {
-  width: 370px;
-  height: 200px;
-  border-radius: 10px;
+:root {
+  --color-dark-purple: hsl(284, 100%, 9%);
+  --color-pink-purple: hsl(298, 97%, 30%);
+  --color-lavendar: hsl(249, 99%, 64%);
+  --color-purple: hsl(278, 94%, 30%);
+  --color-light-gray: hsl(270, 3%, 87%);
+  --color-gray: hsl(212, 12%, 71%);
+  --color-blue-gray: hsl(214, 12%, 74%);
+  --color-washed-black: hsl(0, 0%, 15%);
+}
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
 }
 
 body {
@@ -10,6 +22,14 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-size: 18px;
+}
+
+.card-front,
+.card-back {
+  width: 450px;
+  height: 240px;
+  border-radius: 10px;
 }
 
 .background-section {
@@ -17,18 +37,17 @@ body {
   z-index: 0;
   left: 0;
   background: linear-gradient(
-    to right,
-    hsl(285, 100%, 15%),
-    hsl(298, 97%, 30%)
+    to bottom,
+    var(--color-dark-purple),
+    var(--color-pink-purple)
   );
-  height: 100vh;
-  width: 350px;
 }
 
 .container {
   z-index: 1;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .card-section {
@@ -36,21 +55,85 @@ body {
   max-width: 600px;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 40px;
+  position: relative;
 }
 
 .form-section {
-  width: 50%;
+  width: 40%;
 }
 
 .card-front {
-  background: linear-gradient(to right, hsl(249, 99%, 64%), hsl(278, 94%, 30%));
-  margin-left: 80px;
+  position: relative;
+  margin-left: 30px;
   margin-right: fixed;
+  display: inline-block;
+  color: white;
+}
+
+.card-front-image {
+  display: block; /* Removes bottom space under the image */
+  width: 100%;
+  height: auto;
+}
+
+.card-profile-container {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.card-front-logo {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+
+.card-front-digits {
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 60px;
+  font-size: 28px;
+  font-weight: 400;
+  text-align: center;
+  letter-spacing: 0.2rem;
+}
+
+.card-front-name,
+.card-front-date {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.card-front-name {
+  position: absolute;
+  left: 30px;
+  bottom: 20px;
+}
+
+.card-front-date {
+  position: absolute;
+  right: 30px;
+  bottom: 20px;
 }
 
 .card-back {
-  background-color: gray;
+  position: relative;
+  display: inline-block;
   margin-left: auto;
-  margin-right: 80px;
+  margin-right: 30px;
+}
+
+.card-back-num {
+  position: absolute;
+  bottom: 110px;
+  right: 45px;
+  color: white;
+  font-size: 14px;
+  margin-right: 15px;
 }
