--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 :root {
-  --color-dark-purple: hsl(284, 100%, 9%);
   --color-pink-purple: hsl(298, 97%, 30%);
   --color-lavendar: hsl(249, 99%, 64%);
   --color-purple: hsl(278, 94%, 30%);
@@ -7,6 +6,7 @@
   --color-gray: hsl(212, 12%, 71%);
   --color-blue-gray: hsl(214, 12%, 74%);
   --color-washed-black: hsl(0, 0%, 15%);
+  --color-dark-purple: hsl(278, 68%, 11%);
 }
 
 * {
@@ -48,6 +48,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 100px;
 }
 
 .card-section {
@@ -61,6 +62,7 @@ body {
 
 .form-section {
   width: 40%;
+  margin-right: 60px;
 }
 
 .card-front {
@@ -69,6 +71,7 @@ body {
   margin-right: fixed;
   display: inline-block;
   color: white;
+  box-shadow: 5px 50px 75px rgba(0, 0, 0, 0.2);
 }
 
 .card-front-image {
@@ -125,8 +128,10 @@ body {
 .card-back {
   position: relative;
   display: inline-block;
+  width: auto;
   margin-left: auto;
   margin-right: 30px;
+  box-shadow: 5px 50px 75px rgba(0, 0, 0, 0.15);
 }
 
 .card-back-num {
@@ -136,4 +141,103 @@ body {
   color: white;
   font-size: 14px;
   margin-right: 15px;
+}
+
+.form-section {
+  min-width: 400px;
+  max-width: 400px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.card-name-container,
+.card-number-container,
+.card-exp-date-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.card-name-label,
+.card-number-label,
+.card-exp-date-label,
+.card-cvc-label {
+  font-size: 12px;
+}
+
+input {
+  height: 45px;
+  border-radius: 10px;
+  border: 1px solid var(--color-light-gray);
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Hide spin buttons in Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+#card-name,
+#card-number,
+#card-cvc,
+#card-exp-date {
+  font-size: 16px;
+  opacity: 50%;
+  padding-left: 15px;
+}
+
+#card-number {
+  margin-bottom: 0;
+}
+
+.form-bottom-section {
+  display: flex;
+  gap: 20px;
+}
+
+.form-bottom-container {
+  display: flex;
+  gap: 10px;
+}
+
+#card-exp-date {
+  width: 75px;
+}
+
+.form-cvc-container,
+.form-exp-date-container {
+  display: flex;
+  flex-direction: column;
+}
+
+#card-cvc {
+  width: 100%;
+}
+
+.card-exp-date-container {
+  display: flex;
+}
+
+#card-exp-date,
+#card-cvc {
+  margin-top: 10px;
+}
+
+button {
+  height: 55px;
+  margin-top: 15px;
+  border: none;
+  border-radius: 7px;
+  background: var(--color-dark-purple);
+  color: white;
+  font-size: 16px;
 }
