--- a/styles.css
+++ b/styles.css
@@ -1,196 +1,209 @@
 :root {
-  --color-pink-purple: hsl(298, 97%, 30%);
-  --color-lavendar: hsl(249, 99%, 64%);
-  --color-purple: hsl(278, 94%, 30%);
-  --color-light-gray: hsl(270, 3%, 87%);
-  --color-gray: hsl(212, 12%, 71%);
-  --color-blue-gray: hsl(214, 12%, 74%);
-  --color-washed-black: hsl(0, 0%, 15%);
-  --color-dark-purple: hsl(278, 68%, 11%);
-  --color-red: hsl(0, 100%, 66%);
+    --color-pink-purple: hsl(298, 97%, 30%);
+    --color-lavendar: hsl(249, 99%, 64%);
+    --color-purple: hsl(278, 94%, 30%);
+    --color-light-gray: hsl(270, 3%, 87%);
+    --color-gray: hsl(212, 12%, 71%);
+    --color-blue-gray: hsl(214, 12%, 74%);
+    --color-washed-black: hsl(0, 0%, 15%);
+    --color-dark-purple: hsl(278, 68%, 11%);
+    --color-red: hsl(0, 100%, 66%);
 }
 
 * {
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Space Grotesk", sans-serif;
-  font-weight: 500;
-  letter-spacing: 0.1rem;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 500;
+    letter-spacing: 0.1rem;
 }
 
 body {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: 18px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 18px;
 }
 
 .card-front,
 .card-back {
-  width: 450px;
-  height: 240px;
-  border-radius: 10px;
+    width: 450px;
+    height: 240px;
+    border-radius: 10px;
 }
 
 .background-section {
-  position: fixed;
-  z-index: 0;
-  left: 0;
-  background: linear-gradient(
-    to bottom,
-    var(--color-dark-purple),
-    var(--color-pink-purple)
-  );
+    position: fixed;
+    z-index: 0;
+    left: 0;
+    background: linear-gradient(
+            to bottom,
+            var(--color-dark-purple),
+            var(--color-pink-purple)
+    );
+    height: 100%;
+    width: 35%;
 }
 
 .container {
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 100px;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
 }
 
 .card-section {
-  min-width: 600px;
-  max-width: 600px;
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  position: relative;
+    min-width: 600px;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    position: relative;
 }
 
 .form-section {
-  width: 40%;
-  margin-right: 60px;
+    width: 40%;
+    margin-right: 60px;
 }
 
 .card-front {
-  position: relative;
-  margin-left: 30px;
-  margin-right: fixed;
-  display: inline-block;
-  color: white;
-  box-shadow: 5px 50px 75px rgba(0, 0, 0, 0.2);
+    position: relative;
+    margin-left: 30px;
+    display: inline-block;
+    color: white;
+    box-shadow: 5px 50px 75px rgba(0, 0, 0, 0.2);
 }
 
 .card-front-image {
-  display: block; /* Removes bottom space under the image */
-  width: 100%;
-  height: auto;
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
 .card-profile-container {
-  position: absolute;
-  top: 30px;
-  left: 30px;
-  display: flex;
-  align-items: center;
-  gap: 15px;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
 
 .card-front-logo {
-  position: absolute;
-  top: 30px;
-  left: 30px;
+    position: absolute;
+    top: 30px;
+    left: 30px;
 }
 
 .card-front-digits {
-  position: absolute;
-  margin: auto;
-  left: 0;
-  right: 0;
-  bottom: 60px;
-  font-size: 28px;
-  font-weight: 400;
-  text-align: center;
-  letter-spacing: 0.2rem;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    bottom: 60px;
+    font-size: 28px;
+    font-weight: 400;
+    text-align: center;
+    letter-spacing: 0.2rem;
 }
 
 .card-front-name,
-.card-front-date {
-  font-size: 14px;
-  font-weight: 400;
+.card-front-date-first, .card-front-date-middle, .card-front-date-last {
+    font-size: 14px;
+    font-weight: 400;
 }
 
 .card-front-name {
-  position: absolute;
-  left: 30px;
-  bottom: 20px;
+    position: absolute;
+    left: 30px;
+    bottom: 20px;
 }
 
-.card-front-date {
-  position: absolute;
-  right: 30px;
-  bottom: 20px;
+.card-front-date-first {
+    position: absolute;
+    right: 60px;
+    bottom: 20px;
+}
+
+.card-front-date-middle {
+    position: absolute;
+    right: 52px;
+    bottom: 21px;
+}
+
+.card-front-date-last {
+    position: absolute;
+    right: 30px;
+    bottom: 20px;
 }
 
 .card-back {
-  position: relative;
-  display: inline-block;
-  width: auto;
-  margin-left: auto;
-  margin-right: 30px;
-  box-shadow: 5px 50px 75px rgba(0, 0, 0, 0.15);
+    position: relative;
+    display: inline-block;
+    width: auto;
+    margin-left: auto;
+    margin-right: 30px;
+    box-shadow: 5px 50px 75px rgba(0, 0, 0, 0.15);
 }
 
 .card-back-num {
-  position: absolute;
-  bottom: 110px;
-  right: 45px;
-  color: white;
-  font-size: 14px;
-  margin-right: 15px;
+    position: absolute;
+    bottom: 110px;
+    right: 45px;
+    color: white;
+    font-size: 14px;
+    margin-right: 15px;
 }
 
 .form-section,
 .completed-section {
-  min-width: 400px;
-  max-width: 400px;
+    min-width: 400px;
+    max-width: 400px;
 }
 
 form {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 }
 
 .card-name-container,
 .card-number-container,
 .card-exp-date-container {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .card-name-label,
 .card-number-label,
 .card-exp-date-label,
 .card-cvc-label {
-  font-size: 12px;
+    font-size: 12px;
 }
 
 input {
-  height: 45px;
-  border-radius: 10px;
-  border: 1.5px solid var(--color-light-gray);
-  outline: none;
+    height: 45px;
+    border-radius: 10px;
+    border: 1.5px solid var(--color-light-gray);
+    outline: none;
 }
 
 input:focus {
-  border-color: var(--color-purple);
+    border-color: var(--color-purple);
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* Hide spin buttons in Firefox */
 input[type="number"] {
-  -moz-appearance: textfield;
+    -moz-appearance: textfield;
 }
 
 #card-name,
@@ -198,106 +211,142 @@ input[type="number"] {
 #card-cvc,
 #card-exp-date-month,
 #card-exp-date-year {
-  font-size: 16px;
-  opacity: 50%;
-  padding-left: 15px;
+    font-size: 16px;
+    opacity: 50%;
+    padding-left: 15px;
 }
 
 #card-number {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .form-bottom-section {
-  display: flex;
-  gap: 20px;
+    display: flex;
+    gap: 20px;
 }
 
 .form-bottom-container {
-  display: flex;
-  gap: 10px;
+    display: flex;
+    gap: 10px;
 }
 
 #card-exp-date-month,
 #card-exp-date-year {
-  width: 75px;
+    width: 75px;
 }
 
 .form-cvc-container,
 .form-exp-date-container {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .form-cvc-container {
-  width: 100%;
+    width: 100%;
 }
 
 .card-exp-date-container {
-  display: flex;
+    display: flex;
 }
 
 #card-exp-date-month,
 #card-exp-date-year,
 #card-cvc {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 button {
-  height: 55px;
-  margin-top: 5px;
-  border: none;
-  border-radius: 7px;
-  background: var(--color-dark-purple);
-  color: white;
-  font-size: 16px;
+    height: 55px;
+    margin-top: 5px;
+    border: none;
+    border-radius: 7px;
+    background: var(--color-dark-purple);
+    color: white;
+    font-size: 16px;
 }
 
 .error {
-  border-color: var(--color-red) !important;
+    border-color: var(--color-red) !important;
 }
 
 .error-message {
-  display: none;
-  color: var(--color-red);
-  font-size: 10px;
+    display: none;
+    color: var(--color-red);
+    font-size: 10px;
 }
 
 .error-message.show {
-  display: block;
+    display: block;
 }
 
 .form-bottom-section input {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .completed-section {
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
-  margin-right: 60px;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    margin-right: 60px;
 }
 
 .completed-image {
-  width: 65px;
+    width: 65px;
 }
 
 .completed-heading {
-  font-size: 22px;
+    font-size: 22px;
 }
 
 .completed-message {
-  font-size: 13px;
-  opacity: 50%;
+    font-size: 13px;
+    opacity: 50%;
 }
 
 .completed-text-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
 }
 
 .completed-section button {
-  width: 90%;
+    width: 90%;
 }
+
+@media (max-width: 1100px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .background-section {
+        bottom: 600px;
+        width: 100%;
+    }
+}
+
+@media (max-width: 375px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .background-section {
+        bottom: 1175px;
+        width: 100%;
+    }
+
+    .card-front {
+        width: auto;
+        height: 450px;
+    }
+
+    .card-front-image {
+        width: 275px;
+        position: absolute;
+        top: 200px;
+        left: 100px;
+    }
+}
+
+
